# tuk1_cpu_prefetcher_task

./: .gitignore  BitVector.cpp  CMakeLists.txt  Makefile  README.md  bench.sh  main.cpp  run_benchmark.sh  run_bit_vector.sh  yolo.cpp
plot/: plot.py  plot_bit_vector.py  plot_bit_vectors_gcp.ipynb  plot_bit_vectors_gcp.py  plot_bit_vectors_gcp_skylake.py
results/: bit_vector.csv  bit_vector_point_lookup.csv  bit_vector_skylake.csv  bit_vector_table_scan.csv  non-prefetch.csv  prefetch.csv
results/broadwell/: bit_vector.csv  prefetch.csv
results/fabian/: prefetch.csv
results/haswell/: bit_vector.csv  prefetch.csv
results/new_on_amida/: prefetch.csv
results/skylake/: bit_vector.csv  prefetch.csv
